chore: dot Files

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,9 +19,12 @@
     "no-underscore-dangle": 0,
     "no-param-reassign": 0,
     "no-return-assign": 0,
+    "no-unused-vars": 1,
     "camelcase": 0,
     "import/extensions": 0,
-    "@typescript-eslint/no-redeclare": 0
+    "@typescript-eslint/no-redeclare": 0,
+    "quotes" : 0,
+    "indent" : 0
   },
   "settings": {
     "import/parsers": {
