--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "helmet": "^6.0.1",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "prisma": "^4.13.0"
